# byteboard

./: .gitignore  Doxyfile  README.md  meson.build  project.yml
include/: bitboard.h  bitboard_mapping.h  evaluate.h  hash.h  masks.h  movegen.h  patterns.h  perft.h  piece.h  position.h  rays.h  search.h  uci.h
src/: bitboard.c  evaluate.c  hash.c  main.c  masks.c  movegen.c  patterns.c  perft.c  position.c  rays.c  search.c  uci.c
test/: test_bitboard.c  test_bitboard_mapping.c  test_evaluate.c  test_masks.c  test_movegen.c  test_patterns.c  test_piece.c  test_position.c  test_rays.c  test_search.c  test_uci.c
